--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -52,3 +52,23 @@ li {
     text-align: left;
   }
 }
+
+.H_l_vertical .H_zoom .H_el {
+  width: 36px;
+  height: 32px;
+}
+
+.H_l_vertical .H_zoom .H_el::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.1em;
+  bottom: 0;
+  left: 0;
+  background: rgba(15, 22, 33, 0.1);
+}
+
+.H_btn {
+  width: 36px;
+  height: 36px;
+}
